[iOS WebGL] Fixed WEBGL_compressed_texture_pvrtc. https://bugs.webkit.org/show_bug.cgi?id=133561

Based on Blink r153971 by bajones@chromium.org.

Reviewed by Dean Jackson.

No new tests, but this should fix webgl-compressed-texture-pvrtc.html.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::validateCompressedTexDimensions):
(WebCore::WebGLRenderingContext::validateCompressedTexSubDimensions):
Added checks for pvrtc.



Canonical link: https://commits.webkit.org/151994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170128 268f45cc-cd09-0410-ab3c-d52691b4dbfc